<resources>
    <string name="app_name">WallySchedule</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add Widget</string>
    <string name="appwidget_text">Example</string>
    <string name="widget_today">Today</string>
    <string name="widget_tomorrow">Tomorrow</string>
    <string name="widget_morning_shift">Morning Shift</string>
    <string name="widget_afternoon_shift">Afternoon Shift</string>
    <string name="widget_evening_shift">Evening Shift</string>
    <string name="widget_overnight_shift">Overnight Shift</string>
    <string name="widget_no_shift">Nothing Scheduled</string>
    <string name="widget_youre_off">You\'re off!\nHave a beer!</string>
    <string name="widget_full_schedule">Full Schedule</string>
    <string name="widget_tax_calc">Tax Calculator</string>
    <string name="main_monday">Monday</string>
    <string name="main_tuesday">Tuesday</string>
    <string name="main_wednesday">Wednesday</string>
    <string name="main_thursday">Thursday</string>
    <string name="main_friday">Friday</string>
    <string name="main_saturday">Saturday</string>
    <string name="main_sunday">Sunday</string>
    <string name="main_week">Week</string>
    <string name="main_meal">Meal: </string>
    <string name="main_openshift">Open\nShift</string>
    <string name="progress_title">Please Wait</string>
    <string name="progress_message">Downloading schedule&#8230;</string>
    <string name="fa_REFRESH">&#xf021;</string>
    <string name="fa_MENU">&#xf142;</string>
    <string name="fa_ambulance">&#xf0f9;</string> <!--f0f9 for ambulance icon -->
    <string name="fa_gear">&#xf013;</string>
    <string name="fa_calculator">&#xf1ec;</string>
    <string name="fa_star">&#xf005;</string>
    <string name="fa_back">&#xf060;</string>
    <string name="fa_phone">&#xf095;</string>
    <string name="fa_internet">&#xf268;</string>
    <string name="fa_list">&#xf03a;</string>
    <string name="fa_calendar">&#xf274;</string>
    <string name="main_available_shifts">Open Shifts</string>
    <string name="main_shift_warning">Last Updated: 2017-01-01</string>
    <string name="main_close">Close</string>
    <string name="drawer_taxCalculator">Tax Calculator</string>
    <string name="drawer_callIn">Report an Absence</string>
    <string name="drawer_settings">App Settings</string>
    <string name="drawer_about">About WallySchedule</string>
    <string name="about_main2">Please note that WM1 servers are down sometimes, so if you experience server timeouts, try to refresh your schedule at a later time.</string>
    <string name="about_legal">&#169; Oleg Klyushnik. All Rights Reserved.</string>
    <string name="welcome_welcome">Welcome to WallySchedule, an app designed for one thing: to show you your schedule.</string>
    <string name="welcome_login">Please login with your WM1 account.</string>
    <string name="welcome_next">NEXT</string>
    <string name="welcome_skip">SKIP</string>
    <string name="welcome_widget">A WallySchedule widget is available for you to use on your home screen, so you don\'t have to open the app every time you want to see what time you work tomorrow. Just add it like any other widget. The widget will update your schedule automatically.</string>
    <string name="welcome_no_account">Don\'t have an account</string>
    <string name="welcome_error_header">Something happened...</string>
    <string name="welcome_error_connection">Connection error - can not reach the server.\nDo you have service or Wifi?</string>
    <string name="welcome_error_credentials">Authorization error. Make sure your login and password are correct, and try again.</string>
    <string name="welcome_error_timeout">Server time out. Please try again later. \nWM1 server (login.walmartone.com) can be DOWN 7:00PM - 10:00PM (6:00PM - 10:00PM Sunday) Pacific time.</string>
    <string name="welcome_back">BACK</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="taxcalc_additem">Add Item</string>
    <string name="taxcalc_calculate">Calculate</string>
    <string name="taxcalc_clear">Clear</string>
    <string name="taxConfig_mainLabel">Main Tax (%):</string>
    <string name="taxConfig_taxName">Tax Name:</string>
    <string name="taxConfig_taxRate">Tax Rate:</string>
    <string name="taxConfig_replaceMain">Replaces Main tax</string>
    <string name="taxConfig_addUpdate">Add/Update</string>
    <string name="taxConfig_save">Save Taxes</string>
    <string name="taxCalc_hint">Hint: Swipe to delete, long press to edit</string>
</resources>