<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    android:minHeight="1000dp"
    android:minWidth="1000dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="33"
        android:background="@drawable/welcomebg"
        android:orientation="horizontal"
        android:padding="20dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="If you\'re reading this, replace your phone."
            android:src="@drawable/welcome_overlay" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="67"
        android:orientation="vertical">

        <TextView
            android:id="@+id/welcomeErrorHeadingTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/welcome_error_header"
            android:textColor="@color/min_red"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/welcomeErrorDescriptionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="14sp"
            android:padding="10dp"
            android:text="@string/welcome_error_timeout"
            android:textColor="@color/dark_grey" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/welcomeErrorBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:clickable="true"
                android:paddingBottom="15dp"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:paddingTop="15dp"
                android:text="@string/welcome_back"
                android:textAllCaps="true"
                android:textColor="@color/min_red"
                android:textSize="16sp" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>