<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:weightSum="10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:gravity="bottom|center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/about_legal"
            android:textAllCaps="false"
            android:textColor="@color/dark_grey" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:paddingTop="20dp">

        <TextView
            android:id="@+id/aboutPrivacyTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:paddingBottom="15dp"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:text="PRIVACY POLICY"
            android:textColor="@color/min_red"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/aboutBackTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:paddingBottom="15dp"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:text="@string/welcome_back"
            android:textColor="@color/min_red"
            android:textSize="16sp" />

        <Button
            android:id="@+id/about_helpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/ripple_background_light_blue"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:text="Documentation"
            android:textColor="@android:color/white" />
    </RelativeLayout>

</LinearLayout>