<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="33"
        android:background="@drawable/welcomebg"
        android:orientation="horizontal"
        android:padding="20dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="If you\'re reading this, replace your phone."
            android:src="@drawable/welcome_overlay" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="67"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/welcome_welcome"
            android:textColor="@color/dark_grey"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/welcome_login"
            android:textColor="@color/dark_grey" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/welcome1NoAccountTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:clickable="true"
                android:paddingBottom="15dp"
                android:paddingEnd="0dp"
                android:paddingStart="20dp"
                android:paddingTop="15dp"
                android:text="@string/welcome_no_account"
                android:textAllCaps="true"
                android:textColor="@color/min_red"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/welcome1NextTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:clickable="true"
                android:paddingBottom="15dp"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:paddingTop="15dp"
                android:text="@string/welcome_next"
                android:textColor="@color/min_red"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="18dp"
                android:layout_marginTop="18dp"
                android:labelFor="@+id/welcomeUserNameEditText"
                android:padding="10dp"
                android:text="User name:"
                android:textColor="@color/colorPrimaryDark" />

            <EditText
                android:id="@+id/welcomeUserNameEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textView13"
                android:layout_toEndOf="@+id/textView13"
                android:ems="10"
                android:inputType="textVisiblePassword" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView13"
                android:layout_marginTop="9dp"
                android:layout_toStartOf="@+id/welcomeUserNameEditText"
                android:labelFor="@+id/welcomeUserPasswordEditText"
                android:padding="10dp"
                android:text="Password:"
                android:textColor="@color/colorPrimaryDark" />

            <EditText
                android:id="@+id/welcomeUserPasswordEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textView16"
                android:layout_toEndOf="@+id/textView16"
                android:ems="10"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>