<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:background="#ddffffff"
    android:orientation="vertical"
    android:weightSum="100">

    <TextView
        android:id="@+id/widgetTitle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_vertical"
        android:layout_weight="20"
        android:background="@drawable/ripple_background_blue"
        android:clickable="true"
        android:drawableEnd="@android:drawable/ic_popup_sync"
        android:drawableTint="@android:color/white"
        android:elevation="3dp"
        android:gravity="center_vertical"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="60"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="100">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:orientation="vertical">

            <TextView
                android:id="@+id/widget_todayLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5sp"
                android:paddingLeft="10sp"
                android:paddingTop="8sp"
                android:text="@string/widget_today"
                android:textAllCaps="true"
                android:textColor="@color/dark_grey"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <TextView
                android:id="@+id/widgetTodayTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10sp"
                android:text="No Data"
                android:textColor="@color/dark_grey"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <TextView
                android:id="@+id/widgetTodayMeal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10sp"
                android:textColor="@color/dark_grey"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <TextView
                android:id="@+id/widgetTodayRole"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10sp"
                android:textColor="@color/dark_grey"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/dark_grey"
            android:orientation="vertical"></LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="49"
            android:orientation="vertical">

            <TextView
                android:id="@+id/widget_tomorrowLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5sp"
                android:paddingLeft="10sp"
                android:paddingTop="8sp"
                android:text="@string/widget_tomorrow"
                android:textAllCaps="true"
                android:textColor="@color/dark_grey"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <TextView
                android:id="@+id/widgetTomorrowTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10sp"
                android:text="No Data"
                android:textColor="@color/dark_grey"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <TextView
                android:id="@+id/widgetTomorrowMeal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10sp"
                android:textColor="@color/dark_grey"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <TextView
                android:id="@+id/widgetTomorrowRole"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10sp"
                android:textColor="@color/dark_grey"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/widgetFullScheduleTextView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:background="@drawable/ripple_background_blue"
            android:clickable="true"
            android:elevation="3dp"
            android:gravity="center"
            android:text="@string/widget_full_schedule"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/widgetTaxCalcText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:background="@drawable/ripple_background_light_blue"
            android:clickable="true"
            android:elevation="3dp"
            android:gravity="center"
            android:text="@string/widget_tax_calc"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>